August_30/August_30/src/objects/Devops_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FreeText</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Button click and real time</fullName>
                </value>
                <value>
                    <fullName>1-4 Hours</fullName>
                </value>
                <value>
                    <fullName>One Day</fullName>
                </value>
                <value>
                    <fullName>More than a Day</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Always, we build or make changes directly in Production</fullName>
                </value>
                <value>
                    <fullName>Intermittently on no particular schedule</fullName>
                </value>
                <value>
                    <fullName>Less frequently than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Every two weeks</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>A couple of times a week</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Multiple times per day</fullName>
                </value>
                <value>
                    <fullName>We don’t test anything</fullName>
                </value>
                <value>
                    <fullName>We don’t test much, but what we do test, we do so manually</fullName>
                </value>
                <value>
                    <fullName>We manually test declarative and programmatic changes</fullName>
                </value>
                <value>
                    <fullName>We manually test only programmatic changes</fullName>
                </value>
                <value>
                    <fullName>We manually test only declarative changes</fullName>
                </value>
                <value>
                    <fullName>Using Selenium, we test all declarative and programmatic changes</fullName>
                </value>
                <value>
                    <fullName>Using Selenium, we only test programmatic changes</fullName>
                </value>
                <value>
                    <fullName>Using Selenium we only test declarative changes</fullName>
                </value>
                <value>
                    <fullName>Using Provar, we test all declarative and programmatic changes</fullName>
                </value>
                <value>
                    <fullName>Using Provar, we only test programmatic changes</fullName>
                </value>
                <value>
                    <fullName>Using Provar we only test declarative changes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isMultiSelect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMultiSelect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPickListField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPickListField</label>
        <type>Checkbox</type>
    </fields>
    <label>Devops_Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Devops Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devops_Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>